<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_main">main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="intro">CarEase: \n\n Your ride to \n freedom.</string>
    <string name="get_started">\t\t Get Started \t\t</string>
    <string name="account_setting">Account Setting</string>
    <string name="add_new_car">Add New Car</string>
    <string name="orders_record">Orders Record</string>
    <string name="my_reservation">My Reservation</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
</resources>